# Ghostclaw

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json  render.yaml
aws-prover/: README.md  build-ami.sh  check-status.sh  deploy.sh  kill-all-instances.sh  quick-start.sh  setup-aws.sh
aws-prover/ec2-scripts/: run-proof.sh
aws-prover/lambda/: index.js  package-lock.json  package.json
contracts/: remappings.txt
contracts/script/: Deploy.s.sol  DeployEncryptedContacts.s.sol  DeployLocal.s.sol  DeployPaymentRequests.s.sol  DeploySP1UTXOVerifier.s.sol
contracts/src/: MerkleTree.sol  PaymentRequests.sol  PrivateUTXOLedger.sol  SP1UTXOVerifier.sol
contracts/test/: Concurrency.t.sol  E2E_USDC.t.sol  PaymentRequests.t.sol  PrivateUTXOLedger.t.sol  PrivateUTXOLedger_Base.t.sol  PrivateUTXOLedger_DepositWithdraw.t.sol  PrivateUTXOLedger_Encryption.t.sol  PrivateUTXOLedger_EventsAndViews.t.sol  PrivateUTXOLedger_Fuzz.t.sol  PrivateUTXOLedger_Integration.t.sol  PrivateUTXOLedger_Merkle.t.sol  PrivateUTXOLedger_Nullifiers.t.sol  PrivateUTXOLedger_RustVectors.t.sol
core/: Cargo.toml
core/examples/: test_encryption.rs
core/src/: ledger.rs  main.rs  merkle.rs  note.rs
docs/: AUTHORIZATION_FLOW.md
prover/: README.md
prover-server/: Dockerfile  package-lock.json  package.json  prover-server.js
prover/host/: Cargo.toml
prover/host/src/: check_balance.rs  generate_proof_for_contract.rs  get_vkey.rs  main.rs  verify_onchain.rs
relayer/: Dockerfile  package-lock.json  package.json  server.js  simple-prover-server.js
(+41 files in other folders)
