[package]
name = "sp1-host"
version = "0.1.1"
edition = "2021"

[dependencies]
# Use sp1-sdk without reserved-capacity to default to Mainnet mode
sp1-sdk = { version = "5.2.3", default-features = false, features = ["network"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
alloy-sol-types = "0.8"

# For debug signature verification on host
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }

# Core UTXO library (with encryption feature for host-side precomputation)
utxo-prototype = { path = "../../core", features = ["encryption"] }

[[bin]]
name = "sp1-host"
path = "src/main.rs"

[[bin]]
name = "check-balance"
path = "src/check_balance.rs"

[[bin]]
name = "get-vkey"
path = "src/get_vkey.rs"

[[bin]]
name = "generate-proof-for-contract"
path = "src/generate_proof_for_contract.rs"

[[bin]]
name = "generate-groth16-proof"
path = "src/bin/generate_groth16_proof.rs"

[[bin]]
name = "test-plonk"
path = "src/bin/test_plonk.rs"
